# vibe-voice-vendor-1

./: .gitignore  README.md  pyproject.toml  setup.sh
.github/workflows/: e2e.yml
client/: cli.py  client.py  models.py
deploy/: Caddyfile  env.example  vibevoice-server.service
rust_proxy/: Cargo.toml
rust_proxy/src/: main.rs
scripts/: generate_token.py
server/: __main__.py  app.py  audio.py  auth.py  config.py  groq_client.py  models.py  queue.py  transcribe.py  vllm_client.py
server/routes/: health.py  queue_status.py  transcribe.py
tests/: conftest.py  test_audio.py  test_auth.py  test_queue.py  test_transcribe.py
